[bugfix] overflow-x for code blocks

--- a/style.css
+++ b/style.css
@@ -222,13 +222,8 @@ code {
 	background-color: #f5f5f5;
 }
 
-.sc pre {
-	margin-top: 0;
-}
-
-pre code.hljs {
-	font-size: 15px;
-	padding: 10px;
+pre {
+	overflow-x: auto;
 }
 
 /* Headings
